--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,15 @@ jobs:
 
       uses: actions/checkout@v3
 
+    - name: Authenticate to Google Cloud
+    
+      uses: google-github-actions/auth@v1
+        
+      with:
+      
+        credentials_json: ${{ secrets.GCP_SA_KEY }}
+
+
     - name: Set up Google Cloud SDK
 
       uses: google-github-actions/setup-gcloud@v1
