--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,49 +1,32 @@
-
 name: Deploy to GCS
 
 on:
-
   push:
-
     branches:
-
       - master
-
   workflow_dispatch: # Allows manual triggering of this workflow
 
 jobs:
-
   deploy:
-
     runs-on: ubuntu-latest
 
     steps:
-
     - name: Checkout repository
-
       uses: actions/checkout@v3
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }} # This token is automatically provided by GitHub Actions
 
     - name: Authenticate to Google Cloud
-    
       uses: google-github-actions/auth@v1
-        
       with:
-      
         credentials_json: ${{ secrets.GCP_SA_KEY }}
 
-
     - name: Set up Google Cloud SDK
-
       uses: google-github-actions/setup-gcloud@v1
-
       with:
-
         service_account_key: ${{ secrets.GCP_SA_KEY }}
-
         project_id: hacktrix
 
     - name: Upload to GCS
-
       run: |
-
-        gsutil -m rsync -r ./Mr-Hackrr/Hacktrix gs://hacktrix
+        gsutil -m rsync -r ./ gs://hacktrix
